--- a/store/blocks/desktop/components/home/home__info--card.jsonc
+++ b/store/blocks/desktop/components/home/home__info--card.jsonc
@@ -1,5 +1,45 @@
 {
-  "info-card#one": {
+
+  "flex-layout.col#desktop__home--infocards": {
+    "title": "desktop home infocards",
+    "children": [
+      "flex-layout.row#desktop__mothers--card",
+      "flex-layout.row#desktop__bunny--card"
+    ]
+  },
+
+  "flex-layout.row#desktop__mothers--card": {
+    "title": "mothers card desk",
+    "children": [
+      "info-card#desktop__card--mothers"
+    ],
+    "props": {
+      "blockClass": "desktop__mothers--card"
+    }
+  },
+  "flex-layout.row#desktop__bunny--card": {
+    "title": "bunny card desk",
+    "children": [
+      "info-card#desktop__card--bunny"
+    ]
+  },
+
+  "info-card#desktop__card--mothers": {
+    "title": "infocard number two home",
+    "props": {
+      "id": "info-card-example",
+      "isFullModeStyle": true,
+      "textPosition": "left",
+      "imageUrl": "assets/img/home/desktop__madres--card.jpg",
+      "headline": "SORPRENDE A MAMÁ",
+      "subhead": "Porque mamá se merece lo mejor, te presentamos <br/> nuestros últimos lanzamientos",
+      "callToActionText": "Comprar ahora",
+      "callToActionUrl": "/sale/d",
+      "blockClass": "info-card-example",
+      "textAlignment": "center"
+    }
+  },
+  "info-card#desktop__card--bunny": {
     "title": "infocard number one home",
     "props": {
       "id": "info-card-example",
@@ -9,21 +49,6 @@
       "headline": "BAD BUNNY CAMPUS <br/> WILD MOSS",
       "subhead": "Experimenta la primavera.",
       "callToActionText": "VER AHORA",
-      "callToActionUrl": "/sale/d",
-      "blockClass": "info-card-example",
-      "textAlignment": "center"
-    }
-  },
-  "info-card#two": {
-    "title": "infocard number two home",
-    "props": {
-      "id": "info-card-example",
-      "isFullModeStyle": true,
-      "textPosition": "left",
-      "imageUrl": "assets/img/home/home__image2--desktop.jpg",
-      "headline": "HOME OFF CLASSICS",
-      "subhead": "Clásicos atemporales por una buena razon",
-      "callToActionText": "Comprar ahora",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card-example",
       "textAlignment": "center"
