--- a/store/blocks/desktop/components/home/home__titles--slider.jsonc
+++ b/store/blocks/desktop/components/home/home__titles--slider.jsonc
@@ -1,4 +1,20 @@
 {
+
+  "flex-layout.row#desktop__interesting--title": {
+    "title": "desktop interesting title container",
+    "children": [
+      "rich-text#home__slider--title-one"
+    ]
+  },
+
+  "flex-layout.row#desktop__thebest--title": {
+    "title": "desktop the best title container",
+    "children": [
+      "rich-text#home__slider--title-two"
+    ]
+  },
+
+
   "rich-text#home__slider--title-one": {
     "props": {
       "text": "¿Aún estás interesado?",
