--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -20,17 +20,16 @@
 
   "flex-layout.col#home": {
     "children": [
-      "info-card#one",
-      "info-card#two",
-      "rich-text#home__slider--title-one",
+      "flex-layout.col#desktop__home--infocards",
+      "flex-layout.row#desktop__interesting--title",
       "flex-layout.row#home__shelf",
       "flex-layout.col#home__cards--tendencies",
       "flex-layout.col#desktop__shields--container",
       // "search-result-layout.customQuery#home__search",
-      "rich-text#home__slider--title-two",
+      "flex-layout.row#desktop__thebest--title",
       "flex-layout.row#home__shelf",
       "flex-layout.col#home__grid--popular",
-      "rich-text#home__slider--title-two",
+      "flex-layout.row#desktop__thebest--title",
       "flex-layout.row#home__shelf",
       "flex-layout.row#home__section--history"
     ],
