--- a/store/blocks/tablet/components/home/home__info--card.jsonc
+++ b/store/blocks/tablet/components/home/home__info--card.jsonc
@@ -1,5 +1,41 @@
 {
-  "info-card#tablet__one--bunny": {
+  "flex-layout.col#tablet__home--infocards": {
+    "title": "tablet home infocards",
+    "children": [
+      "flex-layout.row#tablet__mothers--card",
+      "flex-layout.row#tablet__bunny--card"
+    ]
+  },
+
+  "flex-layout.row#tablet__mothers--card": {
+    "title": "mothers card desk",
+    "children": [
+      "info-card#tablet__card--mothers"
+    ]
+  },
+  "flex-layout.row#tablet__bunny--card": {
+    "title": "bunny card desk",
+    "children": [
+      "info-card#tablet__card--bunny"
+    ]
+  },
+
+  "info-card#tablet__card--mothers": {
+    "title": "infocard number two home",
+    "props": {
+      "id": "info-card-example",
+      "isFullModeStyle": true,
+      "textPosition": "left",
+      "imageUrl": "assets/img/home/tablet__madres--card.jpg",
+      "headline": "SORPRENDE A MAMÁ",
+      "subhead": "Porque mamá se merece lo mejor, te <br/> presentamos nuestros últimos <br/>  lanzamientos",
+      "callToActionText": "Comprar ahora",
+      "callToActionUrl": "/sale/d",
+      "blockClass": "tablet__infocards",
+      "textAlignment": "center"
+    }
+  },
+  "info-card#tablet__card--bunny": {
     "title": "infocard number one home",
     "props": {
       "id": "info-card-example",
@@ -10,22 +46,7 @@
       "subhead": "Experimenta la primavera.",
       "callToActionText": "VER AHORA",
       "callToActionUrl": "/sale/d",
-      "blockClass": "phone__infocards",
-      "textAlignment": "center"
-    }
-  },
-  "info-card#tablet__two--classics": {
-    "title": "infocard number two home",
-    "props": {
-      "id": "info-card-example",
-      "isFullModeStyle": true,
-      "textPosition": "left",
-      "imageUrl": "assets/img/home/home__image2--desktop.jpg",
-      "headline": "HOME OFF CLASSICS",
-      "subhead": "Clásicos atemporales por una buena razon",
-      "callToActionText": "Comprar ahora",
-      "callToActionUrl": "/sale/d",
-      "blockClass": "phone__infocards",
+      "blockClass": "tablet__infocards",
       "textAlignment": "center"
     }
   }
