--- a/store/blocks/tablet/screen/home.jsonc
+++ b/store/blocks/tablet/screen/home.jsonc
@@ -20,9 +20,8 @@
 
   "flex-layout.col#home__tablet": {
     "children": [
-      "info-card#tablet__one--bunny",
-      "info-card#tablet__two--classics",
-      "rich-text#home__slider--title-one",
+      "flex-layout.col#tablet__home--infocards",
+      "flex-layout.row#tablet__interesting--title",
       "flex-layout.row#home__shelf",
       "flex-layout.row#mobile__menu--home",
       "flex-layout.col#home__cards--tendencies",
