--- a/store/blocks/mobile/components/home/home.jsonc
+++ b/store/blocks/mobile/components/home/home.jsonc
@@ -1,5 +1,5 @@
 {
-  "flex-layout.row#mobile__menu--home": {
+  "flex-layout.col#mobile__menu--home": {
     "title": "menu mobile home",
     "children": [
       "mega-menu#mobile"
