--- a/manifest.json
+++ b/manifest.json
@@ -52,7 +52,8 @@
     "vtex.product-list": "0.x",
     "vtex.checkout-summary": "0.x",
     "vtex.store-video": "1.x",
-    "vtex.store-link": "0.x"
+    "vtex.store-link": "0.x",
+    "vtex.disclosure-layout": "1.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
