--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -23,11 +23,11 @@
       "flex-layout.col#desktop__home--infocards",
       "flex-layout.row#desktop__interesting--title",
       "flex-layout.row#home__shelf",
+      "flex-layout.row#home__cardstendencies--title",
       "flex-layout.col#home__cards--tendencies",
       "flex-layout.col#desktop__shields--container",
       // "search-result-layout.customQuery#home__search",
-      "flex-layout.row#desktop__thebest--title",
-      "flex-layout.row#home__shelf",
+      "tab-layout#home__tabs--container",
       "flex-layout.col#home__grid--popular",
       "flex-layout.row#desktop__thebest--title",
       "flex-layout.row#home__shelf",
