--- a/store/blocks/tablet/screen/home.jsonc
+++ b/store/blocks/tablet/screen/home.jsonc
@@ -21,18 +21,18 @@
   "flex-layout.col#home__tablet": {
     "children": [
       "flex-layout.col#tablet__home--infocards",
-      "flex-layout.row#tablet__interesting--title",
+      "flex-layout.row#mobile__interesting--title",
       "flex-layout.row#home__shelf",
-      "flex-layout.row#mobile__menu--home",
+      "flex-layout.col#mobile__menu--home",
+      "flex-layout.row#mobile__cardstendencies--title",
       "flex-layout.col#home__cards--tendencies",
-      "flex-layout.col#desktop__shields--container",
+      "flex-layout.col#mobile__shields--container",
       // "search-result-layout.customQuery#home__search",
-      "rich-text#home__slider--title-two",
+      "tab-layout#home__tabs--container",
+      "flex-layout.col#mobile__grid--popular",
+      "flex-layout.row#mobile__thebest--title",
       "flex-layout.row#home__shelf",
-      "flex-layout.col#home__grid--popular",
-      "rich-text#home__slider--title-two",
-      "flex-layout.row#home__shelf",
-      "flex-layout.row#home__section--history"
+      "flex-layout.row#mobile__section--history"
     ],
     "props": {
       "blockClass": "container__desktop--col"
