--- a/manifest.json
+++ b/manifest.json
@@ -53,7 +53,8 @@
     "vtex.checkout-summary": "0.x",
     "vtex.store-video": "1.x",
     "vtex.store-link": "0.x",
-    "vtex.disclosure-layout": "1.x"
+    "vtex.disclosure-layout": "1.x",
+    "vtex.product-price": "1.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
