--- a/store/blocks/desktop/components/PLP/search.jsonc
+++ b/store/blocks/desktop/components/PLP/search.jsonc
@@ -1,28 +1,58 @@
 {
   "store.search": {
-    "blocks": ["search-result-layout#prueba"]
+    "blocks": ["search-result-layout#prueba"],
+    "props": {
+      "context": {
+        "skuFilter": "ALL",
+        "simulationBehavior": "default"
+      }
+    }
   },
 
   "store.search#department": {
-    "blocks": ["search-result-layout#prueba"]
+    "blocks": ["search-result-layout#prueba"],
+    "props": {
+      "context": {
+        "skuFilter": "ALL",
+        "simulationBehavior": "default"
+      }
+    }
   },
 
   "store.search#category": {
-    "blocks": ["search-result-layout#prueba"]
+    "blocks": ["search-result-layout#prueba"],
+    "props": {
+      "context": {
+        "skuFilter": "ALL",
+        "simulationBehavior": "default"
+      }
+    }
   },
 
   "store.search#subcategory": {
-    "blocks": ["search-result-layout#prueba"]
+    "blocks": ["search-result-layout#prueba"],
+    "props": {
+      "context": {
+        "skuFilter": "ALL",
+        "simulationBehavior": "default"
+      }
+    }
   },
 
   "store.search#brand": {
-    "blocks": ["search-result-layout#prueba"]
+    "blocks": ["search-result-layout#prueba"],
+    "props": {
+      "context": {
+        "skuFilter": "ALL",
+        "simulationBehavior": "default"
+      }
+    }
   },
 
   "search-result-layout#prueba": {
     "blocks": [
       "search-result-layout.desktop#global",
-      "search-result-layout.mobile",
+      "search-result-layout.mobile#global",
       "search-not-found-layout"
     ]
   }
