--- a/store/blocks/mobile/screen/plp.jsonc
+++ b/store/blocks/mobile/screen/plp.jsonc
@@ -1,6 +1,6 @@
 {
-  "search-result-layout.desktop#global" : {
-    "title" : "search result desktop",
+  "search-result-layout.mobile#global" : {
+    "title" : "search result mobile",
     "children" : [
       "flex-layout.row#header__plp--container",
       "flex-layout.row#search__results--plp"
