feat: finished product list page in all its views

--- a/store/blocks/desktop/components/PLP/search__layout--switcher.jsonc
+++ b/store/blocks/desktop/components/PLP/search__layout--switcher.jsonc
@@ -1,11 +1,13 @@
 {
   "gallery-layout-switcher": {
+  "title": "gallery layout switcher",
   "children": [
     "gallery-layout-option#grid",
     "gallery-layout-option#list"
   ]
 },
 "gallery-layout-option#grid": {
+  "title": "gallery layout switcher grid",
   "props": {
     "name": "general-grid"
   },
@@ -15,6 +17,7 @@
   ]
 },
 "gallery-layout-option#list": {
+  "title": "gallery layout switcher list",
   "props": {
     "name": "general-list"
   },
@@ -24,16 +27,19 @@
   ]
 },
 "responsive-layout.desktop#textOptionGrid": {
+  "title": "gallery layout switcher option grid",
   "children": [
     "rich-text#option-grid"
   ]
 },
 "responsive-layout.desktop#textOptionList": {
+  "title": "gallery layout switcher option list",
   "children": [
     "rich-text#option-list"
   ]
 },
 "rich-text#option-grid": {
+  "title": "gallery layout switcher option grid text",
   "props": {
     "text": "Grid",
     "textColor": "c-auto",
@@ -41,6 +47,7 @@
   }
 },
 "rich-text#option-list": {
+  "title": "gallery layout switcher option list text",
   "props": {
     "text": "List",
     "textColor": "c-auto",
