--- a/store/blocks/mobile/components/header/header.jsonc
+++ b/store/blocks/mobile/components/header/header.jsonc
@@ -82,6 +82,7 @@
   "drawer#search": {
     "blocks": [
         "drawer-trigger#mobile__icon--search"
+        // "drawer-header#header--menu"
     ],
     "props": {
       "slideDirection": "rightToLeft",
