--- a/store/blocks/desktop/components/PLP/header__plp.jsonc
+++ b/store/blocks/desktop/components/PLP/header__plp.jsonc
@@ -21,37 +21,69 @@
   "flex-layout.col#plp__breadcrumb": {
     "title": "plp breadcrumb",
     "children": [
-      "breadcrumb.search"
+      "breadcrumb.search#desktop__header--breadcrumb"
     ]
   },
-  // "flex-layout.col#plp__gallery--switcher": {
-  //   "title": "plp switcher",
-  //   "children": [
-  //     "gallery-layout-switcher"
-  //   ]
-  // },
+  "breadcrumb.search#desktop__header--breadcrumb": {
+    "title": "desktop header breadcrumb",
+    "props": {
+      "blockClass": "header__breadcrumb--desktop"
+    }
+  },
 
   "flex-layout.col#plp__modal--filter": {
     "title": "plp switcher",
     "children": [
-      "gallery-layout-switcher",
-      "modal-trigger#header__plp--filters"
+      "flex-layout.row#desktop__plp--switcher",
+      "flex-layout.row#desktop__plp--filters"
     ],
     "props": {
       "blockClass": "plp__modal--filter"
     }
   },
 
-  "modal-trigger#header__plp--filters": {
-    "title": "header plp filters",
+  "flex-layout.row#desktop__plp--switcher": {
+    "title": "desktop plp switcher",
     "children": [
-      "rich-text#plp__filters--btn",
-      "modal-layout#plp__filters--modal"
+      "gallery-layout-switcher"
     ],
     "props": {
-      "blockClass": "header__plp--filters"
+      "blockClass": "plp__switcher--desktop"
     }
   },
+
+  "flex-layout.row#desktop__plp--filters": {
+    "title": "desktop plp switcher",
+    "children": [
+      "drawer#header__plp--filters"
+    ],
+    "props": {
+      "blockClass": "plp__filters--desktop"
+    }
+  },
+
+
+  "drawer#header__plp--filters": {
+    "title": "header plp filters",
+    "blocks": [
+      "drawer-trigger#mobile__text--filters"
+      // "drawer-header#header--menu"
+  ],
+  "props": {
+    "slideDirection": "rightToLeft",
+    "blockClass": "drawer__filters"
+  },
+  "children": [
+    "filter-navigator.v3"
+  ]
+  },
+
+  "drawer-trigger#mobile__text--filters": {
+    "children":[
+      "rich-text#plp__filters--btn"
+    ]
+  },
+
   "rich-text#plp__filters--btn": {
     "title": "plp filters btn",
     "props": {
@@ -59,13 +91,20 @@
       "blockClass": "plp__filters--btn"
     }
   },
-  "modal-layout#plp__filters--modal": {
-    "title": "plp filters modal",
-    "children": [
-      "filter-navigator.v3"
-    ],
-    "props": {
-      "blockClass": "plp__filters--modal"
+
+  // "modal-layout#plp__filters--modal": {
+  //   "title": "plp filters modal",
+  //   "children": [
+  //     "filter-navigator.v3"
+  //   ],
+  //   "props": {
+  //     "blockClass": "plp__filters--modal"
+  //   }
+  // },
+  "filter-navigator.v3": {
+    "title": "filter navigator",
+    "props":{
+      "blockClass": "desktop__filter--navigator"
     }
   }
 }
