Revert "Feature/plp"

--- a/store/blocks/mobile/components/header/header.jsonc
+++ b/store/blocks/mobile/components/header/header.jsonc
@@ -82,7 +82,6 @@
   "drawer#search": {
     "blocks": [
         "drawer-trigger#mobile__icon--search"
-        // "drawer-header#header--menu"
     ],
     "props": {
       "slideDirection": "rightToLeft",
@@ -103,7 +102,9 @@
       "blockClass": "mobile__header--search",
       "hasIconLeft": false,
       "openAutocompleteOnFocus": true,
-      "autocompleteAlignment": "right"
+      // "containerMode": "overlay",
+      "maxWidth": 900,
+      "height": 900
 
     }
 },
@@ -118,7 +119,7 @@
   "flex-layout.row#header__mobile--section-one": {
     "title": "header mobile section one drawer and favorites",
     "children": [
-      "drawer#mobile__header--menu",
+      "drawer",
       "image#Header__user--favorites"
     ],
     "props": {
@@ -126,7 +127,7 @@
     }
   },
 
-  "drawer#mobile__header--menu": {
+  "drawer": {
     "title": "Mega menu mobile",
     "children": [
       "flex-layout.col#mobile__menu--container"
@@ -136,7 +137,15 @@
     },
     "blocks": ["drawer-header#my-drawer"]
   },
-
+  "mega-menu#mobile": {
+    "title": "header mobile section mega menu",
+    "props": {
+      "title": " ",
+      "defaultDepartmentActive": "...",
+      "orientation": "vertical",
+      "openOnly": "vertical"
+    }
+  },
 
   "flex-layout.col#mobile__menu--container": {
     "title": "mobile menu container",
@@ -147,16 +156,6 @@
     ],
     "props": {
       "blockClass": "mobile__menu--container"
-    }
-  },
-
-  "mega-menu#mobile": {
-    "title": "header mobile section mega menu",
-    "props": {
-      "title": " ",
-      "defaultDepartmentActive": "...",
-      "orientation": "vertical",
-      "openOnly": "vertical"
     }
   },
 
