--- a/store/blocks/mobile/components/home/home.jsonc
+++ b/store/blocks/mobile/components/home/home.jsonc
@@ -1,51 +1,8 @@
 {
-  // "flex-layout.col#mobile__menu--home": {
-  //   "title": "menu mobile home",
-  //   "children": [
-  //     "flex-layout.row#4-desktop"
-  //   ]
-  // },
-
-  // "flex-layout.row#4-desktop": {
-  //   "children": [
-  //     "flex-layout.col#trigger-mega-menu"
-  //     // ...
-  //   ]
-  // },
-
-  // "flex-layout.row#mega-menu": {
-  //   "children": ["mega-menu#desktop"]
-  // },
-  // "mega-menu#desktop": {
-  //   "props": {
-  //     "openOnly": "horizontal"
-  //   }
-  // },
-  // "flex-layout.col#trigger-mega-menu": {
-  //   "props": {
-  //     "verticalAlign": "middle"
-  //   },
-  //   "children": ["mega-menu-trigger-btn"]
-  // },
-  // "mega-menu-trigger-btn": {
-  //   "props": {
-  //     "Drawer": "drawer"
-  //   }
-  // }
-
-  "flex-layout.col#mobile__home--menu": {
-    "children": ["flex-layout.row#mega-menu"]
-  },
-
-  "flex-layout.row#mega-menu": {
-    "children": ["mega-menu#desktop"]
-  },
-  "mega-menu#desktop": {
-    "props": {
-      "title": " ",
-      "openOnly": "horizontal"
-    }
+  "flex-layout.col#mobile__menu--home": {
+    "title": "menu mobile home",
+    "children": [
+      "mega-menu#mobile"
+    ]
   }
 }
-
-
