--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -4,12 +4,12 @@
     "children": [
       "slider-layout#header__slider-top",
       "flex-layout.row#header__section--subheader",
-      "header-row#desktop",
+      "flex-layout.row#desktop",
       "rich-text#section-one"
     ]
   },
 
-  "header-row#desktop": {
+  "flex-layout.row#desktop": {
     "title": "header desktop",
     "props": {
       "horizontalAlign": "center",
@@ -20,33 +20,15 @@
       "blockClass": "header__bottom"
     },
     "children": [
-      "logo#desktop__logo-adidas",
+      "flex-layout.col#logo-desktop",
       // "image#header__logo",
       // "flex-layout.row#spacer",
-      // "flex-layout.col#spacer__desktop-one",
-      "header-spacer",
+      "flex-layout.col#spacer__desktop-one",
       "flex-layout.row#header__bottom--menu",
       // "flex-layout.col#spacer__desktop-two",
       "search-bar#desktop__header--menu",
       "flex-layout.row#header__bottom--user"
     ]
-  },
-
-  // "flex-layout.col#logo-desktop": {
-  //   "title": "logo adidas",
-  //   "props": {
-  //     "verticalAlign": "middle"
-  //   },
-  //   "children": ["logo"]
-  // },
-  "logo#desktop__logo-adidas": {
-    "props": {
-      "title": "Logo",
-      "href": "/",
-      "url": "assets/img/header/Adidas_logo_two.svg",
-      "width": "93",
-      "blockClass": "container-logo"
-    }
   },
 
   "search-bar#desktop__header--menu": {
@@ -58,8 +40,8 @@
       "blockClass": "mobile__header--menu",
       "hasIconLeft": false,
       "openAutocompleteOnFocus": true,
-      "containerMode": "overlay"
-      // "maxWidth": 900
+      "containerMode": "overlay",
+      "maxWidth": 900
     }
   },
 
